# duckdb

./: CMakeLists.txt
tools/pythonpkg/: CMakeLists.txt  MANIFEST.in  README.md  duckdb_python.cpp  pyproject.toml  setup.py
tools/pythonpkg/scripts/: generate_connection_methods.py  generate_connection_wrapper_methods.py  generate_import_cache_cpp.py
tools/pythonpkg/src/: CMakeLists.txt  dataframe.cpp  importer.cpp  map.cpp  path_like.cpp  pyconnection.cpp  pyexpression.cpp  pyfilesystem.cpp  pyrelation.cpp  pyresult.cpp  pystatement.cpp  python_dependency.cpp  python_import_cache.cpp  python_replacement_scan.cpp  python_udf.cpp
tools/pythonpkg/src/arrow/: CMakeLists.txt  arrow_array_stream.cpp  arrow_export_utils.cpp
tools/pythonpkg/src/common/: CMakeLists.txt  exceptions.cpp
tools/pythonpkg/src/functional/: CMakeLists.txt  functional.cpp
tools/pythonpkg/src/include/duckdb_python/: filesystem_object.hpp  functional.hpp  jupyter_progress_bar_display.hpp  map.hpp  path_like.hpp  pyfilesystem.hpp  pyrelation.hpp  pyresult.hpp  pystatement.hpp  python_conversion.hpp  python_dependency.hpp  python_objects.hpp  python_replacement_scan.hpp  pytype.hpp  pyutil.hpp  typing.hpp
tools/pythonpkg/src/include/duckdb_python/arrow/: arrow_array_stream.hpp  arrow_export_utils.hpp
tools/pythonpkg/src/include/duckdb_python/conversions/: optional_wrapper.hpp
tools/pythonpkg/src/include/duckdb_python/expression/: pyexpression.hpp
tools/pythonpkg/src/include/duckdb_python/import_cache/: importer.hpp  python_import_cache.hpp  python_import_cache_item.hpp
tools/pythonpkg/src/include/duckdb_python/nanobind/: dataframe.hpp  exceptions.hpp  gil_wrapper.hpp  nb_wrapper.hpp  python_object_container.hpp  registered_py_object.hpp
tools/pythonpkg/src/include/duckdb_python/nanobind/conversions/: exception_handling_enum.hpp  explain_enum.hpp  null_handling_enum.hpp  pyconnection_default.hpp  python_udf_type_enum.hpp  render_mode_enum.hpp
tools/pythonpkg/src/include/duckdb_python/numpy/: array_wrapper.hpp  numpy_bind.hpp  numpy_result_conversion.hpp  numpy_scan.hpp  numpy_type.hpp  raw_array_wrapper.hpp
tools/pythonpkg/src/include/duckdb_python/pandas/: pandas_analyzer.hpp  pandas_bind.hpp  pandas_scan.hpp
tools/pythonpkg/src/include/duckdb_python/pandas/column/: pandas_numpy_column.hpp
tools/pythonpkg/src/include/duckdb_python/pybind11/: dataframe.hpp  exceptions.hpp  gil_wrapper.hpp  pybind_wrapper.hpp  python_object_container.hpp  registered_py_object.hpp
tools/pythonpkg/src/include/duckdb_python/pybind11/conversions/: exception_handling_enum.hpp  explain_enum.hpp  null_handling_enum.hpp  pyconnection_default.hpp  python_csv_line_terminator_enum.hpp  python_udf_type_enum.hpp  render_mode_enum.hpp
tools/pythonpkg/src/include/duckdb_python/pyconnection/: pyconnection.hpp
tools/pythonpkg/src/jupyter/: CMakeLists.txt  jupyter_progress_bar_display.cpp
tools/pythonpkg/src/nanobind/: CMakeLists.txt  nb_wrapper.cpp
tools/pythonpkg/src/native/: CMakeLists.txt  python_conversion.cpp  python_objects.cpp
tools/pythonpkg/src/numpy/: CMakeLists.txt  array_wrapper.cpp  numpy_bind.cpp  numpy_scan.cpp  raw_array_wrapper.cpp  type.cpp
tools/pythonpkg/src/pandas/: CMakeLists.txt  analyzer.cpp  bind.cpp  scan.cpp
tools/pythonpkg/src/pybind11/: pybind_wrapper.cpp
tools/pythonpkg/src/pyconnection/: CMakeLists.txt  type_creation.cpp
tools/pythonpkg/src/pyexpression/: CMakeLists.txt  initialize.cpp
tools/pythonpkg/src/pyrelation/: CMakeLists.txt  initialize.cpp
tools/pythonpkg/src/typing/: CMakeLists.txt  pytype.cpp  typing.cpp
